# twitter

./: Dockerfile  fly.toml  pyproject.toml  readme.md  requirements.txt  vercel.json
feed/: admin.py  models.py  urls.py  views.py
feed/migrations/: 0001_initial.py  0002_newtweet_user.py
feed/templates/: feed.html
templates/: base.html  navbar.html
templates/static/base/css/: base.css
templates/static/cadastro/css/: cadastro.css
templates/static/feed/css/: feed.css
templates/static/home/css/: home.css
templates/static/navbar/css/: navbar.css
templates/static/profile/css/: profile.css
templates/static/profile_list/css/: profile_list.css
templates/static/usuarios/css/: cadastro.css
twitter/: settings.py  urls.py  wsgi.py
usuarios/: admin.py  forms.py  models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_profile_data_modified.py  0003_rename_data_modified_profile_date_modified.py  0004_profile_bio.py  0005_profile_photo_perfil.py  0006_alter_profile_photo_perfil.py  0007_alter_profile_bio.py  0008_rename_photo_perfil_profile_profile_image.py
usuarios/templates/: cadastro.html  home.html  login.html  profile.html  profile_list.html  update_perfil.html
