[tool.poetry]
name = "twitter"
version = "0.1.0"
description = "app-social-media"
authors = ["cardrocha <cardrocharj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
